--- a/src/main/resources/static/css/addbill.css
+++ b/src/main/resources/static/css/addbill.css
@@ -96,7 +96,7 @@ header h1 {
     font-size: 28px;
     font-weight: 800;
     margin-bottom: 8px;
-    color: var(--header-black);
+    color: #2d3748;
 }
 
 header p {
