--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -78,7 +78,7 @@ body, html {
     margin-bottom: 12px;
     font-size: 26px;
     font-weight: 700;
-    color: #1a1a1a;
+    color: #2d3748;
 }
 
 .login-container p {
